# CMSIS-NN

./: CMakeLists.txt
Include/: arm_nn_math_types.h
